# compiz-plugins-community

./: configure.ac
src/: Makefile.am
src/rubik/: Makefile.am
