## Process this file with automake to produce Makefile.in
##	headtracking       \

SUBDIRS =                 \
	boing              \
	desktopclick       \
	dodge              \
	flash              \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	prompt             \
	roach              \
	rubik              \
	showrepaint        \
	visualevent        \
	wiimote            \
	wiitrack           \
	windowcapture
