## Process this file with automake to produce Makefile.in
##	headtracking       \
##	visualevent        \

SUBDIRS =                 \
	boing              \
	desktopclick       \
	dodge              \
	flash              \
	lazypointer        \
	maze               \
	mousegestures      \
	newton             \
	peek               \
	prompt             \
	roach              \
	rubik              \
	showrepaint        \
	wiimote            \
	wiitrack           \
	windowcapture
